syntax = "proto3";

package product;

service ProductService {
	rpc CreateProduct (Product) returns (Product) {};
	rpc FindOne (ProductById) returns (Product) {};
	rpc UpdateProduct (Product) returns (Product) {};
	rpc FindMany (stream ProductById) returns (stream Product) {};
	rpc RemoveProduct (ProductById) returns (DeleteProduct) {};
}

message ProductById {
	int32 id = 1;
}

message Product {
	int32 id = 1;
	string name = 2;
	int32 count = 3;
	int32 price = 4;
}
message AddProduct {
	int32 id = 1;
	string name =2;
	int32 price = 3;
}
message ProductCount {
	int32 id = 1;
	int32 count = 3;
}
message DeleteProduct{
	int32 id =1;
	string name = 2;
}
